<resources>
    <!--Admob credential-->
    <string name="admob_app_id">ca-app-pub-2917426024691439~3638506383</string>
    <string name="admob_interstitial_id">ca-app-pub-2917426024691439/9417570388</string>
    
    <string name="app_name">IMDB Movies</string>
    <string name="str_txt_top_title">Top Movies</string>
    <string name="str_txt_coming_title">Up Coming Movies</string>
    <string name="str_txt_now_title">Now Playing</string>
    <string name="str_txt_pop_title">Popular Movies</string>
    <string name="str_txt_sim_title">Similar Movies</string>
    <string name="str_txt_rec_title">Recommendation Movies</string>
    <string name="str_txt_release_date">Release Date</string>
    <string name="str_txt_rate">Rating</string>
    <string name="str_txt_videos">Videos</string>
    <string name="str_alert_load">Loading movies...</string>
    <string name="str_alert_error_title">Error</string>
    <string name="str_alert_about_title">About</string>
    <string name="str_alert_about">API from TMDB API</string>
    <string name="str_alert_rto">Request time out</string>
    <string name="str_alert_404">Not found</string>
    <string name="str_alert_500">Internal server error</string>
    <string name="str_alert_net">Please check your internet connection</string>
</resources>
