<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/refresh_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.depeloper.android.imdb_movies.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#eee">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="8dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:id="@+id/header_title_now"
                        android:text="@string/str_txt_now_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_now"
                        android:layout_below="@id/header_title_now"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginRight="-2dp"
                        android:layout_height="match_parent">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:id="@+id/header_title_coming"
                        android:text="@string/str_txt_coming_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_coming"
                        android:layout_below="@id/header_title_coming"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginRight="-2dp">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:id="@+id/header_title_pop"
                        android:text="@string/str_txt_pop_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_pop"
                        android:layout_below="@id/header_title_pop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginRight="-2dp">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/header_title_top"
                        android:text="@string/str_txt_top_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_top"
                        android:layout_below="@id/header_title_top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginRight="-2dp">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
