<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/refresh_detail_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.tesrv.DetailMovie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/movie_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"/>

                    <!--<VideoView-->
                        <!--android:id="@+id/video_view"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent" />-->

                    <ImageButton
                        android:layout_width="56dp"
                        android:layout_height="48dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:onClick="playVideo"
                        android:scaleType="center"
                        android:src="@drawable/ic_youtube"/>

                    <TextView
                        android:id="@+id/txt_title_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="#96000000"
                        android:padding="16dp"
                        tools:text="Title"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:id="@+id/desc_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    tools:text="deskripsi"
                    android:id="@+id/txt_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/str_txt_release_date"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:id="@+id/txt_date"
                    tools:text="Tanggal rilis"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/str_txt_rate"
                    android:layout_marginTop="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--<ImageView-->
                        <!--android:layout_width="24dp"-->
                        <!--android:layout_height="24dp"-->
                        <!--android:adjustViewBounds="true"-->
                        <!--android:src="@android:drawable/star_off"/>-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_rate"
                        android:textSize="16sp"
                        tools:text="rating 5"/>
                </LinearLayout>

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textSize="16sp"-->
                    <!--android:text="@string/str_txt_videos"-->
                    <!--android:layout_marginTop="8dp"/>-->

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:id="@+id/header_title_similar"
                        android:text="@string/str_txt_sim_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_similar"
                        android:layout_below="@id/header_title_similar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginRight="-2dp">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:id="@+id/header_title_recomend"
                        android:text="@string/str_txt_rec_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_recomend"
                        android:layout_below="@id/header_title_recomend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginRight="-2dp">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
